--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-typescript-hw-01-1",
+  "name": "goit-typescript-hw-01",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "typescript": "~5.6.2",
-    "vite": "^5.4.10"
+    "vite": "^5.4.9"
+  },
+  "dependencies": {
+    "axios": "^1.7.7"
   }
 }
